volunteer-registration/force-app/main/default/objects/Volunteer__c/Volunteer__c.object-meta.xml
<CustomObject>
    <label>Volunteer</label>
    <nameField>
        <label>Volunteer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingRules>
        <ownerRules>
            <fullName>AllUsers_to_APIGuestAccess</fullName>
            <accessLevel>Edit</accessLevel>
            <sharedTo>
                <group>APIGuestAccess</group>
            </sharedTo>
            <sharedFrom>
                <allUsers>true</allUsers>
            </sharedFrom>
            <label>All Users to API Guest Access</label>
        </ownerRules>
    </sharingRules>
    <sharingRules>
        <ownerRules>
            <fullName>AllUsers_to_APIGuestAccess</fullName>
            <accessLevel>Edit</accessLevel>
            <sharedTo>
                <group>APIGuestAccess</group>
            </sharedTo>
            <sharedFrom>
                <allUsers>true</allUsers>
            </sharedFrom>
            <label>All Users to API Guest Access</label>
        </ownerRules>
    </sharingRules>
</CustomObject>