volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Accommodations_Needed__c.field-meta.xml
<CustomField>
    <fullName>Accommodations_Needed__c</fullName>
    <label>Accommodations Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>