volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Certification_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Certification_File_URL__c</fullName>
    <label>Certification File URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>