volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Comfortable_With__c.field-meta.xml
<CustomField>
    <fullName>Comfortable_With__c</fullName>
    <label>Comfortable With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>