volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Community_Service_Hours__c.field-meta.xml
<CustomField>
    <fullName>Community_Service_Hours__c</fullName>
    <label>Community Service Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>