volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Day_Preference__c.field-meta.xml
<CustomField>
    <fullName>Day_Preference__c</fullName>
    <label>Day Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>