volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Signature__c</fullName>
    <label>Electronic Signature</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>