volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Events_Signed_Up__c.field-meta.xml
<CustomField>
    <fullName>Events_Signed_Up__c</fullName>
    <label>Events Signed Up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>