volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Facebook_Handle__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Handle__c</fullName>
    <label>Facebook Handle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>