volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Instagram_Handle__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Handle__c</fullName>
    <label>Instagram Handle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>