volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Location_Preference__c.field-meta.xml
<CustomField>
    <fullName>Location_Preference__c</fullName>
    <label>Location Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>No preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>