volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Offender_Policy_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Offender_Policy_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offender Policy Confirmed</label>
    <type>Checkbox</type>
</CustomField>