volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Other_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Other_Assignment__c</fullName>
    <label>Other Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>