volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Pass_Hash__c.field-meta.xml
<CustomField>
    <fullName>Pass_Hash__c</fullName>
    <label>Pass Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>