volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_URL__c</fullName>
    <label>Profile Picture URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>