volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Skills_to_Use__c.field-meta.xml
<CustomField>
    <fullName>Skills_to_Use__c</fullName>
    <label>Skills to Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>