volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Tasks_to_Avoid__c.field-meta.xml
<CustomField>
    <fullName>Tasks_to_Avoid__c</fullName>
    <label>Tasks to Avoid</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>