volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Text_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Text_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text Opt In</label>
    <type>Checkbox</type>
</CustomField>