volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Time_Preference__c.field-meta.xml
<CustomField>
    <fullName>Time_Preference__c</fullName>
    <label>Time Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>