volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Total_Hours_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Available__c</fullName>
    <label>Total Hours Available</label>
    <length>100</length>
    <type>Text</type>
</CustomField>