volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Volunteer_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Assignments__c</fullName>
    <label>Volunteer Assignments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>