volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Type__c</fullName>
    <label>Volunteer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company Representative</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>