volunteer-registration/force-app/main/default/objects/Volunteer__c/fields/Why_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Why_Volunteer__c</fullName>
    <label>Why Volunteer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>